<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >    
    
    <TextView android:id="@+id/status"
        android:text= "@string/noconnection"
        android:textSize = "30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    
    <Button android:id="@+id/connect_button"
        android:text = "@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button android:id="@+id/button1"
        android:text = "@string/button1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:width = "100dp"
        android:height = "100dp" />
	    
    <Button android:id="@+id/button2"
        android:text = "@string/button2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:width = "100dp"
        android:height = "100dp" />

    <Button android:id="@+id/button3"
        android:text = "@string/button3"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:width = "100dp"
        android:height = "100dp" />
    
</RelativeLayout>
