<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ebf5fa"
    android:padding="5dip">
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >	        

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="0.2"
            android:gravity="left|center_vertical"
            android:text="@string/history_channel"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="Information"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left|center_vertical"
            android:text="@string/history_time"
            android:textSize="15dp" />

    </LinearLayout>
    <View android:id="@+id/separator" 
			android:background="#006699" 
			android:layout_width = "fill_parent"
			android:layout_height="2dip" />
    <ListView
        android:id="@+id/history_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button android:id="@+id/history_clear"
        style="@style/SetupButtons"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dip"
        android:text="@string/clear_history" />
    
    
</LinearLayout>
